janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__resolve_a_declared_file.snap
---
source: src/analysis/modules/tests.rs
expression: fixture/shapes
---
----- IMPORT
fixture/shapes from /ws/src/main.janet

----- LOADS
/ws/src/shapes.janet
