janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__resolve_a_directory_to_its_init.snap
---
source: src/analysis/modules/tests.rs
expression: "./pkg"
---
----- IMPORT
./pkg from /ws/src/main.janet

----- LOADS
/ws/src/pkg/init.janet
