janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__resolve_a_relative_file.snap
---
source: src/analysis/modules/tests.rs
expression: "./a"
---
----- IMPORT
./a from /ws/src/main.janet

----- LOADS
/ws/src/a.janet
