janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__resolve_from_the_project_root.snap
---
source: src/analysis/modules/tests.rs
expression: /lib/b
---
----- IMPORT
/lib/b from /ws/src/main.janet

----- LOADS
/ws/lib/b.janet
