janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__resolve_the_local_tree_before_the_syspath.snap
---
source: src/analysis/modules/tests.rs
expression: spork/json
---
----- IMPORT
spork/json from /ws/src/main.janet

----- LOADS
/ws/jpm_tree/lib/spork/json.janet
