janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__resolve_under_the_syspath_variable.snap
---
source: src/analysis/modules/tests.rs
expression: "@syspath/spork/http"
---
----- IMPORT
@syspath/spork/http from /ws/src/main.janet

----- LOADS
/sys/spork/http.janet
