janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__use_several_modules.snap
---
source: src/analysis/modules/tests.rs
expression: (use ./c ./d)
---
----- SOURCE CODE
(use ./c ./d)

----- IMPORTS
./c as ""
./d as ""
